<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.jitsik.memologue.AddActivity">

    <EditText android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name" />

    <CheckBox android:id="@+id/periodic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_section_space"
        android:text="@string/hint_periodic"
        android:checked="true" />
    <CheckBox android:id="@+id/important"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_important"
        android:checked="true" />

    <RelativeLayout android:id="@+id/period_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/activity_section_space">

        <RelativeLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <TextView android:id="@+id/days_label"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_days"
                android:gravity="center" />
            <TextView android:id="@+id/hours_label"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_hours"
                android:gravity="center"
                android:layout_toRightOf="@id/days_label" />
            <TextView android:id="@+id/minutes_label"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_minutes"
                android:gravity="center"
                android:layout_toRightOf="@id/hours_label" />

            <NumberPicker android:id="@+id/days"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/days_label" />
            <NumberPicker android:id="@+id/hours"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/hours_label"
                android:layout_toRightOf="@id/days" />
            <NumberPicker android:id="@+id/minutes"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/minutes_label"
                android:layout_toRightOf="@id/hours"/>

        </RelativeLayout>

    </RelativeLayout>

    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_add"
        android:layout_marginTop="@dimen/activity_section_space"
        android:onClick="addTask" />

</LinearLayout>
